--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -19,9 +19,9 @@
 				<li>
 					<a href="#general_info">Informacje ogólne</a>
 				</li>
-				<li>
+<!--				<li>
 					<a href="#sensors">Czujniki</a>
-				</li>
+                    </li> -->
 				<li>
 					<a href="#monitoring">Podgląd z kamer</a>
 				</li>
@@ -44,37 +44,38 @@
 			</div>
 
 			<!-- Div containing graphs of sensor data -->
-			<div class="tabContent" id="sensors">
+<!--		<div class="tabContent" id="sensors">
 				<h2>Odczyty z czujników</h2>
 				<div>
 					<p>
 						Czujnik temperatury
 					</p>
 					<div id="chartContainer" style="height: 300px; width: 100%;">
-						<!--Intentionally left blank-->
 					</div>
 				</div>
-			</div>
+            </div> -->
 
 			<!-- Live streaming from webcams -->
 			<div class="tabContent" id="monitoring">
 				<h2>Podgląd z kamer</h2>
 				<div>
                     {%for cameraPort in cameraPorts%}
-                        <img src="https://{{ipaddress}}:{{cameraPort}}/?action=stream" />
+                        <img src="http://{{ipaddress}}:{{cameraPort}}/?action=stream" />
                     {%end%}
 				</div>
 			</div>
 
 			<!-- Socket infos -->
 			<div class="tabContent" id="sockets">
-                <h2>Gniazdko 1</h2>
-				<div>
-                    <div id="socketDiv"></div>
+                {%for socket in sockets%}
+                <h2>{{socket.name}}</h2>
+                <div>
+                    <div id="socketDiv{{socket.id}}" class="socketDiv"></div>
                     <br />
-                    <button type="button" onclick="setSocket(true)">ON</button>
-                    <button type="button" onclick="setSocket(false)">OFF</button>
+                    <button type="button" onclick="setSocket({{socket.id}}, true)">ON</button>
+                    <button type="button" onclick="setSocket({{socket.id}}, false)">OFF</button>
 				</div>
+                {%end%}
 			</div>
 
 			<!-- Files that can be put or retrieved -->
