Index.html fix 2

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -21,7 +21,7 @@
 				</li>
 				{%for mclass, _ in classes.iteritems()%}
 				<li>
-					<a href="#{{mclass}}">{{class}}</a>
+					<a href="#{{mclass}}">{{mclass}}</a>
                 </li>
 				{%end%}
 				<li>
