Additional changes to GUI

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -37,6 +37,7 @@
 
 			<!-- Here will be general info about whole system -->
 			<div class="tabContent" id="general_info">
+			    <script> setInterval(function() { getUptime(); }, 60*1000);</script>
 				<h2>Statystyki systemu</h2>
 				<div>
                     <div id="systemDiv"></div>
