--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -1,87 +1,122 @@
 {% autoescape None %}
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>RaspberryPI</title>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-		<script type="text/javascript" src="{{ static_url("scripts/script.js") }}"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
+    <title>WRH server</title>
 
-		<link type="text/css" rel="stylesheet" media="all" href="{{ static_url("styles/main_style.css") }}" />
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-	</head>
-	<body onload="init()">
-		<div class="main_div">
+    <!-- MetisMenu CSS -->
+    <link href="css/metisMenu.min.css" rel="stylesheet">
 
-			<!-- Tabbed webpages taken from: http://www.elated.com/articles/javascript-tabs/ -->
-			<ul id="tabs">
-				<li>
-					<a href="#general_info">Informacje ogólne</a>
-				</li>
-				{%for mclass, m in classes.iteritems()%}
+    <!-- Timeline CSS -->
+    <link href="css/timeline.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/startmin.css" rel="stylesheet">
+
+    <!-- Morris Charts CSS -->
+    <link href="css/morris.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Custom scripts -->
+    <script type="text/javascript" src="{{ static_url("scripts/script.js") }}"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
+</head>
+<body>
+
+<div id="wrapper">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">WRH HOME</a>
+        </div>
+
+        <!-- Top Navigation: Left Menu -->
+        <ul class="nav navbar-nav navbar-left navbar-top-links">
+            <li><a href="#"><i class="fa fa-home fa-fw"></i>System</a></li>
+            {%for mclass, m in classes.iteritems()%}
                     {%for m in modules%}
                         {%if m.type_number == mclass%}
                             <li>
-                                <a href="#{{mclass}}">{{m.type_name}}</a>
+                                <a href="javascript:updateMainContent({{mclass}});">{{m.type_name}}</a>
                             </li>
                             {%break%}
                         {%end%}
                     {%end%}
-				{%end%}
-				<li>
-					<a href="#files">Przeglądarka plików</a>
-				</li>
-			</ul>
-
-			<!-- Here will be general info about whole system -->
-			<div class="tabContent" id="general_info">
-			    <script> setInterval(function() { getUptime(); }, 60*1000);</script>
-				<h2>Statystyki systemu</h2>
-				<div>
-                    <div id="systemDiv"></div>
-                    <br />
-                    <button type="button" onclick="getUptime()">Refresh</button>
-				</div>
-			</div>
-
-            {%for mclass, _ in classes.iteritems()%}
-			<div class="tabContent" id="{{mclass}}">
-			    {%for m in modules%}
-			        {%if m.type_number == mclass%}
-			        {{m.get_html_representation(ipaddress)}}
-			        {%end%}
-			    {%end%}
-            </div>
 			{%end%}
+        </ul>
 
-			<!-- Files that can be put or retrieved -->
-			<div class="tabContent" id="files">
-				<h2>Wgrywanie plików</h2>
-				<div>
-					<ul>
-						<li id = "title">
-							Pliki na serwerze
-						</li>
-						{%for item in items%}
-						<li id="file">
-							<a href="http://{{ipaddress}}:8888/show?filename={{item}}">{{item}}</a>
-						</li>
-						{%end%}
-					</ul>
-					<div id="formcontainer" align="center">
-						<form action="/upload" enctype="multipart/form-data" method="post">
-							<p>
-								<input type="file" name="filearg">
-								<input type="submit" value="upload">
-							</p>
-						</form>
-					</div>
-				</div>
+        <!-- Top Navigation: Right Menu -->
+        <ul class="nav navbar-right navbar-top-links">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="fa fa-user fa-fw"></i> piotr@mini.pl <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu dropdown-user">
+                    <li><a href="#"><i class="fa fa-user fa-fw"></i>Profile</a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-gear fa-fw"></i>Settings</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li><a href="#"><i class="fa fa-sign-out fa-fw"></i>Logout</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 
-			</div>
+    <!-- Page Content -->
+    <div id="page-wrapper">
+        <div class="container-fluid" id="content_container">
 
-		</div>
-	</body>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">System statistics</h1>
+                </div>
+            </div>
+
+            <!-- ... Your content goes here ... -->
+             <script> setInterval(function() { getUptime(); }, 60*1000);</script>
+			 <div>
+                 <div id="systemDiv"></div>
+                 <br />
+                 <button type="button" onclick="getUptime()">Refresh</button>
+			 </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Metis Menu Plugin JavaScript -->
+<script src="js/metisMenu.min.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="js/startmin.js"></script>
+
+</body>
 </html>
