--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -34,11 +34,6 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <!-- Custom scripts -->
-    <script type="text/javascript" src="{{ static_url("scripts/script.js") }}"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
 </head>
 <body>
 
@@ -52,7 +47,7 @@
 
         <!-- Top Navigation: Left Menu -->
         <ul class="nav navbar-nav navbar-left navbar-top-links">
-            <li><a href="#"><i class="fa fa-home fa-fw"></i>System</a></li>
+            <li><a href="javascript:updateMainContent(-1);"><i class="fa fa-home fa-fw"></i>SYSTEM</a></li>
             {%for mclass, m in classes.iteritems()%}
                     {%for m in modules%}
                         {%if m.type_number == mclass%}
@@ -95,7 +90,7 @@
             </div>
 
             <!-- ... Your content goes here ... -->
-             <script> setInterval(function() { getUptime(); }, 60*1000);</script>
+             <script> getUptime(); setInterval(function() { getUptime(); }, 60*1000);</script>
 			 <div>
                  <div id="systemDiv"></div>
                  <br />
@@ -107,16 +102,21 @@
 </div>
 
 <!-- jQuery -->
-<script src="js/jquery.min.js"></script>
+<script src="{{ static_url("js/jquery.min.js")}}"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="{{ static_url("js/bootstrap.min.js")}}"></script>
 
 <!-- Metis Menu Plugin JavaScript -->
 <script src="{{ static_url("js/metisMenu.min.js")}}"></script>
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ static_url("js/startmin.js")}}"></script>
+
+<!-- Custom scripts -->
+<script type="text/javascript" src="{{ static_url("scripts/script.js") }}"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
 
 </body>
 </html>
