--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -11,7 +11,7 @@
     <title>WRH server</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet">
+    <!-- <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet"> -->
 
     <!-- MetisMenu CSS -->
     <link href="{{ static_url("css/metisMenu.min.css") }}" rel="stylesheet">
@@ -53,12 +53,12 @@
 
         <!-- Top Navigation: Left Menu -->
         <ul class="nav navbar-nav navbar-left navbar-top-links">
-            <li><a href="/?class=-1"><i class="fa fa-home fa-fw"></i>SYSTEM</a></li>
+            <li><a href="/?class=-1"><i class="fa fa-fw"></i>SYSTEM</a></li>
             {%for mclass, m in classes.iteritems()%}
                     {%for m in modules%}
                         {%if m.type_number == mclass%}
                             <li>
-                                <a href="/?class={{m.type_number}}">{{m.type_name}}</a>
+                                <a class="fa fa-fw" href="/?class={{m.type_number}}">{{m.type_name}}</a>
                             </li>
                             {%break%}
                         {%end%}
