Additional GUI changes

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -106,6 +106,7 @@
                 </div>
             </div>
 
+            <div style="width: 60%; margin-left: auto; margin-right:auto;">
             <!-- ... Your content goes here ... -->
             {% if target == -1 %}
                  <script> getUptime(); setInterval(function() { getUptime(); }, 60*1000);</script>
