Fixes and changes in GUI and modules

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -70,15 +70,15 @@
         <ul class="nav navbar-right navbar-top-links">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i> piotr@mini.pl <b class="caret"></b>
+                    piotr@mini.pl <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
-                    <li><a href="#"><i class="fa fa-user fa-fw"></i>Profile</a>
+                    <li><a href="#">Profile</a>
                     </li>
-                    <li><a href="#"><i class="fa fa-gear fa-fw"></i>Settings</a>
+                    <li><a href="#">Settings</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="#"><i class="fa fa-sign-out fa-fw"></i>Logout</a>
+                    <li><a href="#">Logout</a>
                     </li>
                 </ul>
             </li>
