--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -11,7 +11,7 @@
     <title>WRH server</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet"> -->
+    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
     <link href="{{ static_url("css/metisMenu.min.css") }}" rel="stylesheet">
@@ -46,7 +46,7 @@
 <div id="wrapper">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">WRH HOME</a>
         </div>
