Changes in webpage GUI 2

--- a/WRH_Engine/Modules/TORNADO/login.html
+++ b/WRH_Engine/Modules/TORNADO/login.html
@@ -1,5 +1,13 @@
 <html>
-<title>WRH System Login</title>
+<head>
+    <style type="text/css">
+    table {
+        margin: 0px auto;
+    }
+    </style>
+    <title>WRH System Login</title>
+</head>
+
 <body>
     <div style="text-align: center; margin-top: 5%;">
     <img src="{{ static_url("images/logo.png") }}" />
