Changes in webpage GUI 4

--- a/WRH_Engine/Modules/TORNADO/login.html
+++ b/WRH_Engine/Modules/TORNADO/login.html
@@ -11,8 +11,7 @@
 <body>
     <div style="text-align: center; margin-top: 5%;">
     <img src="{{ static_url("images/logo.png") }}" />
-    <br />
-    <form action="/login" method="post">
+    <form action="/login" method="post" style="margin-top: 2%">
         <table>
             <tr>
                 <td>Login: </td>
