--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -78,7 +78,7 @@
                     <li><a href="#">Settings</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="#">Logout</a>
+                    <li><a href="/logout">Logout</a>
                     </li>
                 </ul>
             </li>
