--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div style="width: 60%; margin-left: 0px auto; margin-right: 0px auto;">
+            <div style="width: 60%; margin-left: auto; margin-right: auto;">
             <!-- ... Your content goes here ... -->
             {% if target == -1 %}
                  <script> getUptime(); setInterval(function() { getUptime(); }, 60*1000);</script>
