Rango Iryga new web design 10

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div style="width: 60%; margin-left: auto; margin-right: auto;">
+            <div style="width: 60%; margin-left: auto; margin-right: auto; text-align: center">
             <!-- ... Your content goes here ... -->
             {% if target == -1 %}
                  <script> getUptime(); setInterval(function() { getUptime(); }, 60*1000);</script>
