Index.html changes

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -86,7 +86,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div id="page-wrapper">
+    <div id="page-wrapper" style="margin-left: auto; margin-right: auto; text-align: center">
         <div class="container-fluid" id="content_container">
 
             <div class="row">
