--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -28,17 +28,18 @@
     <!-- Custom Fonts -->
     <link href="{{ static_url("css/font-awesome.min.css") }}" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{{ static_url("css/materialize.min.css") }}">
 
 	<!-- Custom scripts -->
+    <script src="{{ static_url("js/jquery.min.js")}}"></script>
 	<script type="text/javascript" src="{{ static_url("scripts/script.js") }}"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
+    <script type="text/javascript" src="{{ static_url("js/materialize.min.js") }}"></script>
 </head>
 <!-- <body onLoad="init();"> -->
 <body>
@@ -123,13 +124,11 @@
                     {%end%}
                 {%end%}
             {% end %}
+            </div>
         </div>
     </div>
 
 </div>
-
-<!-- jQuery -->
-<script src="{{ static_url("js/jquery.min.js")}}"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="{{ static_url("js/bootstrap.min.js")}}"></script>
