--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -29,10 +29,17 @@
     <link href="{{ static_url("css/font-awesome.min.css") }}" rel="stylesheet" type="text/css">
 
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="{{ static_url("css/materialize.min.css") }}">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 	<!-- Custom scripts -->
     <script src="{{ static_url("js/jquery.min.js")}}"></script>
@@ -41,7 +48,7 @@
 	<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
     <script type="text/javascript" src="{{ static_url("js/materialize.min.js") }}"></script>
 </head>
-<!-- <body onLoad="init();"> -->
+
 <body>
 
 <div id="wrapper">
