--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -11,92 +11,54 @@
     <title>WRH server</title>
 
     <!--Import Google Icon Font-->
-    <!--<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="{{ static_url("css/materialize.min.css") }}">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet">
-
-    <!-- MetisMenu CSS -->
-    <link href="{{ static_url("css/metisMenu.min.css") }}" rel="stylesheet">
-
-    <!-- Timeline CSS -->
-    <link href="{{ static_url("css/timeline.css") }}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="{{ static_url("css/startmin.css") }}" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-    <link href="{{ static_url("css/morris.css") }}" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="{{ static_url("css/font-awesome.min.css") }}" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-	<!-- Custom scripts -->
-	<script type="text/javascript" src="{{ static_url("scripts/script.js") }}"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="{{ static_url("scripts/canvasjs.min.js") }}"></script>
 </head>
 
 <body>
 
 <div id="wrapper">
 
+    <!-- Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="#!">Profile</a></li>
+      <li><a href="#!">Settings</a></li>
+      <li class="divider"></li>
+      <li><a href="/logout">Logout</a></li>
+    </ul>
+
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">WRH HOME</a>
-        </div>
+    <nav>
+        <div class="nav-wrapper">
+            <a class="brand-logo left" href="/">WRH HOME</a>
 
-        <!-- Top Navigation: Left Menu -->
-        <ul class="nav navbar-nav navbar-left navbar-top-links">
-            <li><a href="/?class=-1">SYSTEM</a></li>
-            {%for mclass, m in classes.iteritems()%}
-                    {%for m in modules%}
-                        {%if m.type_number == mclass%}
-                            <li>
-                                <a href="/?class={{m.type_number}}">{{m.type_name}}</a>
-                            </li>
-                            {%break%}
+            <!-- Top Navigation: Left Menu -->
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="/?class=-1">SYSTEM</a></li>
+                {%for mclass, m in classes.iteritems()%}
+                        {%for m in modules%}
+                            {%if m.type_number == mclass%}
+                                <li>
+                                    <a href="/?class={{m.type_number}}">{{m.type_name}}</a>
+                                </li>
+                                {%break%}
+                            {%end%}
                         {%end%}
-                    {%end%}
-			{%end%}
-        </ul>
-
-        <!-- Top Navigation: Right Menu -->
-        <ul class="nav navbar-right navbar-top-links">
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    piotr@mini.pl <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu dropdown-user">
-                    <li><a href="#">Profile</a>
-                    </li>
-                    <li><a href="#">Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li><a href="/logout">Logout</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
+                {%end%}
+                <!-- Dropdown Trigger -->
+                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Account<i class="material-icons right">arrow_drop_down</i></a></li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Page Content -->
     <div id="page-wrapper" style="margin-left: auto; margin-right: auto; text-align: center">
-        <div class="container-fluid" id="content_container">
+        <div class="container-fluid">
 
-            <div class="row">
-                <div class="col-lg-12">
+            <div class="row-title">
                 <h1 class="page-header">
                     {% if target == -1 %}
                     System statistics
@@ -109,7 +71,6 @@
                         {%end%}
                     {% end %}
                  </h1>
-                </div>
             </div>
 
             <div style="width: 60%; margin-left: auto; margin-right: auto; text-align: center">
@@ -135,17 +96,17 @@
 
 </div>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="{{ static_url("js/bootstrap.min.js")}}"></script>
-
-<!-- Metis Menu Plugin JavaScript -->
-<script src="{{ static_url("js/metisMenu.min.js")}}"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="{{ static_url("js/startmin.js")}}"></script>
-
+<!-- Javascript scripts -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ static_url("js/script.js") }}"></script>
 <script src="{{ static_url("js/jquery.min.js")}}"></script>
 <script type="text/javascript" src="{{ static_url("js/materialize.min.js") }}"></script>
+
+<script>
+$( document ).ready(function() {
+    $(".dropdown-button").dropdown();
+});
+</script>
 
 </body>
 </html>
