--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -16,6 +16,9 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="{{ static_url("css/materialize.min.css") }}">
 
+    <!--Important Javascript functions-->
+    <script type="text/javascript" src="{{ static_url("js/script.js") }}"></script>
+
 </head>
 
 <body>
@@ -31,8 +34,9 @@
     </ul>
 
     <!-- Navigation -->
+    <div class="navbar-fixed">
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper grey darken-4">
             <a class="brand-logo left" href="/">WRH HOME</a>
 
             <!-- Top Navigation: Left Menu -->
@@ -53,6 +57,7 @@
             </ul>
         </div>
     </nav>
+    </div>
 
     <!-- Page Content -->
     <div id="page-wrapper" style="margin-left: auto; margin-right: auto; text-align: center">
@@ -80,7 +85,7 @@
                  <div>
                      <div id="systemDiv"></div>
                      <br />
-                     <button type="button" onclick="getUptime()">Refresh</button>
+                     <button class="waves-effect waves-light btn grey darken-3" type="button" onclick="getUptime()">Refresh</button>
                  </div>
             {% else %}
                 {%for m in modules%}
@@ -98,7 +103,6 @@
 
 <!-- Javascript scripts -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="{{ static_url("js/script.js") }}"></script>
 <script src="{{ static_url("js/jquery.min.js")}}"></script>
 <script type="text/javascript" src="{{ static_url("js/materialize.min.js") }}"></script>
 
