--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -39,7 +39,7 @@
     <nav>
         <div class="nav-wrapper grey darken-4">
             <a class="brand-logo left" href="/">WRH HOME</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse">
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
             <!-- Top Navigation: Left Menu -->
             <ul id="nav-mobile" class="right hide-on-med-and-down">
