Changes to Rango Iryga

--- a/WRH_Engine/Modules/TORNADO/index.html
+++ b/WRH_Engine/Modules/TORNADO/index.html
@@ -38,7 +38,7 @@
     <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper grey darken-4">
-            <a class="brand-logo" href="/">WRH HOME</a>
+            <a class="brand-logo" href="/" style="margin-left: 15px; margin-right: 15px">WRH HOME</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
             <!-- Top Navigation: Left Menu -->
