Initial Rango Iryga Scheduler release

--- a/wrh_engine/tornado/index.html
+++ b/wrh_engine/tornado/index.html
@@ -11,7 +11,7 @@
     <title>WRH server</title>
 
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="{{ static_url("css/material_font.css") }}" rel="stylesheet">
 
     <!--Import CSS styles-->
     <link type="text/css" rel="stylesheet" href="{{ static_url("css/materialize.min.css") }}">
