--- a/wrh_engine/tornado/index.html
+++ b/wrh_engine/tornado/index.html
@@ -44,28 +44,18 @@
             <!-- Top Navigation: Left Menu -->
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/?">SYSTEM</a></li>
-                {%for mclass, _ in classes.iteritems()%}
-                        {%for m in modules%}
-                            {%if m.WRHID == mclass%}
-                                <li>
-                                    <a href="/?class={{m.WRHID}}">{{m.TYPE_NAME}}</a>
-                                </li>
-                                {%break%}
-                            {%end%}
-                        {%end%}
+                {%for mclass in classes%}
+                    <li>
+                        <a href="/?class={{mclass.WRHID}}">{{mclass.TYPE_NAME}}</a>
+                    </li>
                 {%end%}
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="/?">SYSTEM</a></li>
-                {%for mclass, _ in classes.iteritems()%}
-                        {%for m in modules%}
-                            {%if m.WRHID == mclass%}
-                                <li>
-                                    <a href="/?class={{m.WRHID}}">{{m.TYPE_NAME}}</a>
-                                </li>
-                                {%break%}
-                            {%end%}
-                        {%end%}
+                {%for mclass in classes%}
+                    <li>
+                        <a href="/?class={{mclass.WRHID}}">{{mclass.TYPE_NAME}}</a>
+                    </li>
                 {%end%}
             </ul>
         </div>
@@ -115,7 +105,6 @@
 </div>
 
 <!-- Javascript scripts -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="{{ static_url("js/jquery.min.js")}}"></script>
 <script type="text/javascript" src="{{ static_url("js/materialize.min.js") }}"></script>
 
