--- a/modules/dht22/html/repr.html
+++ b/modules/dht22/html/repr.html
@@ -4,7 +4,7 @@
             var res = text.split(";");
             var h = res[0];
             var t = res[1];
-            document.getElementById("dht22Div{id}").innerHTML = "Humidity: " + h + "% Temperature: " + t + "*C";
+            document.getElementById("dht22Div{id}").innerHTML = "Humidity: " + h + "% Temperature: " + t + "&deg;C";
         }}
 
         function getMeasurements{id}() {{
